--- a/project0/assets/styles/main.css
+++ b/project0/assets/styles/main.css
@@ -1,13 +1,34 @@
 @import url('https://fonts.googleapis.com/css?family=Cute+Font|Roboto&display=swap');
 body{
     background-color: #fff !important;
+    background: url(../images/aurora-1197753_1920.jpg) no-repeat center center fixed;
+    background-size: cover;
+    
+}
+.lowest-stack{
+    z-index: -4;
+}
+.lower-stack{
+    z-index: -3;
+}
+.low-stack{
+    z-index: -2;
 }
 .container.content{
     width: 80%;
 }
-/*.navbar-brand{
-    font-family: 'Cute Font', cursive;
-}*/
+div.jumbotron{
+    background: transparent !important;
+}
+header{
+    box-shadow: 0 -5px 7px 7px rgba(0,0,0,.4);
+}
+.navbar-brand{
+    font-family: 'Roboto';
+}
+.navbar-collapse ul{
+    text-align: center;
+}
 #headshot{
     text-align: center;
 }
@@ -21,6 +42,9 @@ footer{
     text-align: center;
     padding-top: 15px;
 }
+footer{
+    box-shadow: 0 5px 7px 7px rgba(0,0,0,.4);
+}
 footer a{
     margin-right: 4px;
     color: #fff;
@@ -31,7 +55,24 @@ footer a:hover{
     text-decoration: none;
     font-size: 1.2rem;
 }
-
+#sidebar{
+    min-height: 960px;
+    background: #56606a;
+    color: #fff;
+    box-shadow: 5px 0 7px 7px rgba(0,0,0,.3);
+}
+#sidebar.sidebar.open{
+    width: 15%;
+}
+#sidebar.sidebar.closed{
+    width: 5%;
+}
+.top-stack{
+    z-index: 5;
+}
+.mid-stack{
+    z-index: -1;
+}
 @media only screen and (max-width: 725px) {
     /* Sticky footer fix (stops footer from overlaying content */
     body{
@@ -39,14 +80,29 @@ footer a:hover{
         margin-bottom: 100px;
         clear: both;
     }
+    .navbar-brand{
+        font-size: 36px;
+    }
+    .nav-link{
+        font-size: 24px;
+    }
+    .panda-mobile{
+        width: 100% !important;
+    }
+    .mt-5-mob{
+        margin-top: 5px;
+    }
+    .jumbotron.container{
+        width: 100%;
+    }
     .container.content{
-        width: 80%;
+        width: 90%;
     }
     .row{
         margin-top: 10px;
     }
     .content-text{
-        width: 80%;
+        width: 100%;
         margin: 0 auto;
     }
     .content-text h2{
@@ -55,4 +111,5 @@ footer a:hover{
     body {
       background-color: lightblue;
     }
+   
 }
